--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-slick": "^0.23.8",
     "axios": "^0.26.1",
     "md5": "^2.3.0",
     "polished": "^4.1.4",
     "react": "^18.0.0",
-    "react-carousel-responsive": "^0.0.31",
     "react-dom": "^18.0.0",
     "react-epic-spinners": "^0.5.0",
-    "react-horizontal-scrolling-menu": "^2.7.1",
     "react-icons": "^4.3.1",
-    "react-material-ui-carousel": "^3.3.3",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.5",
-    "styled-components-carousel": "^0.2.0",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
@@ -31,7 +26,6 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.24",
-    "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2"
   },
   "scripts": {
