--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "axios": "^0.26.1",
     "md5": "^2.3.0",
     "polished": "^4.1.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-epic-spinners": "^0.5.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
@@ -19,13 +19,21 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/md5": "^2.3.2",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.24",
+    "axios-mock-adapter": "^1.21.1",
+    "babel-jest": "^28.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.1",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-mock": "^28.1.1",
     "typescript": "^4.4.2"
   },
   "scripts": {
